crates/pulsus-traceql/tests/corpus/accept/intrinsic_span_duration.traceql
{ span:duration > 100ms }
