crates/pulsus-traceql/tests/corpus/reject/duration_overflow.traceql
{ duration > 99999999999999999999s }
